<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/username"
            android:paddingHorizontal="20dp"
            android:textColor="@color/light_grey"
            android:textSize="30sp" />
    </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="100dp">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:paddingHorizontal="20dp"
          android:text="@string/Password"
          android:textColor="@color/light_grey"
          android:textSize="30sp" />

  </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="89dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:text="@string/sign_in" />


    </FrameLayout>
</LinearLayout>