<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="1000"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progress_bar"
            android:secondaryProgress="0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/total_sales"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Total_sales"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/teal_700">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sold_items"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="20dp"/>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/grey"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Revenue"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="20dp"/>

        </LinearLayout>
        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cost"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="20dp"/>

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Profit"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="20dp"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>