<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:src="@drawable/profile"
            tools:ignore="contentDescription" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/change_profile_pic" />



    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/grey"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="97dp">

        <ImageView
            android:layout_width="126dp"
            android:layout_height="105dp"
            android:paddingBottom="10dp"
            android:src="@drawable/logo"
            tools:ignore="contentDescription" />

        <Button
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/change_banner" />
    </FrameLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/business_name"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginHorizontal="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_grey"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/grey"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Bio_description"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginHorizontal="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/light_grey"/>


        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/grey"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/working_hours"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginHorizontal="20dp"/>
</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@color/light_grey">

            </EditText>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/grey"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_media"
            android:textSize="20sp"
            android:fontFamily="sans-serif-black"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:src="@drawable/social"
            tools:ignore="contentDescription"/>

    </FrameLayout>




</LinearLayout>