<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@drawable/hamburger"
                    tools:ignore="contentDescription"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile"
                    tools:ignore="contentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/Profile_name"
                    android:textSize="30sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="160sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="80dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/Profile_handle"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bio"
                    android:paddingHorizontal="20dp"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/btn_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Followers"
                    android:layout_gravity="bottom"
                    android:paddingHorizontal="20dp"
                    android:textSize="11sp"
                    android:fontFamily="sans-serif-black"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btn_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="60dp"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/Dashboard"
                    android:textSize="11sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/btn_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="60dp"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/edit_profile"
                    android:textSize="11sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:src="@drawable/banner"
                    android:scaleType="centerCrop"
                    tools:ignore="contentDescription"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_imageView1"
                    android:layout_width="206dp"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    app:srcCompat="@drawable/bag"
                    tools:ignore="contentDescription" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">


                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription" />


                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="end"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="bottom"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="bottom"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">
                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="90dp"
                        android:layout_height="100dp"

                        android:layout_gravity="bottom"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription"/>

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="bottom"
                        app:srcCompat="@drawable/square"
                        tools:ignore="contentDescription" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/square"
                    tools:ignore="contentDescription"/>
            </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:outlineProvider="none"
        app:borderWidth="0dp"
        app:maxImageSize="50dp"
        app:fabCustomSize="100dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/image_selected"
        android:src="@drawable/add"
        />
</FrameLayout>